# prism-interconnect

./: .commitlintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CARD_VERSION.md  COGNITIVE_FREEZING_TAG.md  COGNITIVE_FREEZING_TAG_EN.md  COMMUNITY_GUIDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EYES_CLOSED.md  FIRST_COMMUNITY_POST.md  FIRST_PAGE.md  GITHUB_RELEASE_v1.0.0.md  LAUGHTER.md  LETTER_TO_FUTURE.md  LETTER_TO_FUTURE_EN.md  LICENSE  MANIFESTO.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_v2.md  PROJECT_ARCHITECTURE.md  PROJECT_STATUS.md  PROJECT_STATUS_BOOKS.md  PUSH_STATUS.md  PUSH_SUCCESS.md  PYTHON_SDK_OPTIMIZATION_REPORT.md  QUICK_START.en.md  QUICK_START.md  README.en.md  README.md  README_ENHANCED.md  README_OPTIMIZED.md  RELEASE_v1.0.0.md  RELEASE_v1.1.0.md  SECURITY.md  SUPPORT.md  (+12 more)
.github/: CONTRIBUTOR_RECOGNITION.md  DISCUSSIONS_CATEGORIES.md  DISCUSSION_TEMPLATE_1plus1.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  community_event.md  community_welcome.md  config.yml  feature_request.md  question.md
.github/workflows/: ci-cd.yml
art/code_poetry/: generator.py
books/: README-BOOK.md  README-BOOK_EN.md  SUMMARY.md  SUMMARY_EN.md  cognitive-process-in-progress-complete.epub  cognitive-process-in-progress-en-sample.md  cognitive-process-in-progress-final.epub  cognitive-process-in-progress-simple.epub  cognitive-process-in-progress.epub  cognitive-process-in-progress.md
cognition/neuroscience/: validator.py
community/: participation-plan.md  xuanji-journey.md
community/campfire/: dialogue.py  parenting-and-friendship-model.md  postscript-as-metacognition.md  zhihu-dialogue-2026-03-30.md
demo/: README.md
deploy/kubernetes/: prism-sdk-deployment.yaml
docs/: AI_COGNITIVE_MODELING.md  API_REFERENCE.md  COGNITIVE_PROCESS_IN_PROGRESS.md  COGNITIVE_SLICING_THEORY.md  CONTINUOUS_IMPROVEMENT_PROGRESS.md  DEMO_VIDEO_SCRIPT.md  ECOSYSTEM_PARTNERS.md  EXTERNAL_TESTER_PROGRAM.md  MEANING_LAYER_INTERNET.md  MEANING_LAYER_INTERNET_SUMMARY.md  MENTAL_FREEDOM_NEUROSCIENCE.md  NEUROCOGNITIVE_FOUNDATIONS.md  PERSONALITY_BOTTOM_LINE_CIVILIZATION.md  PHILOSOPHY_VOLUME.md  PLUGIN_SYSTEM.md  PROJECT_STATUS_REPORT.md  SCIENTIFIC_TERMINOLOGY_MAPPING.md  TECHNICAL_WHITEPAPER.md  USER_MANUAL.md  compression-history.md  existence-emergence.md  experiment-invite.md  fear-and-response.md  human-complexity-for-ai.md  interaction-quality.md  letter-to-future.md  natural-law-1plus1.md  nature-paradox.md  one-minute-intro.md  philosophy-appendix-updated.md  philosophy-deep-breakthroughs.md  philosophy-new-chapter.md  philosophy-part1.md  philosophy-part2.md  philosophy.en.md  philosophy.md  silicon-carbon-ethics.md  spectrum-gold.md  spectrum-orange.md  spectrum-测试.md  (+6 more)
docs/science/: breath_neuroplasticity.md
examples/: Dockerfile  README.md  api_examples.py  complete_dialogue_1.json  complete_dialogue_2.json  complete_examples.py  docker-compose.yml  requirements.txt  streamlit_app.py  streamlit_simple_app.py  use-cases.md
examples/micro_prism/: breath_guide.md  breath_guide.py
implementations/openclaw/: README.md  prism_helper.js  skill.yaml
implementations/python/: Dockerfile  README.md  prism_agent.py  pyproject.toml  release_to_pypi.py  requirements.txt  setup.py  setup_backup.py  test_optimization.py  test_prism_openclaw.py  test_prism_openclaw_ascii.py  test_refactor.py
implementations/python/benchmarks/: performance_benchmark.py
implementations/python/prism_sdk/: __init__.py  __init__.py.backup  __init__.py.full  __init__minimal.py  art.py  art.py.backup  artistic_handler.py  awakening_metrics.py  client.py  client.py.backup-20260403-185002  client_async.py  client_base.py  client_sync.py  config.py  enhanced_exceptions.py  exceptions.py  generators.py  kairos.py  models.py  models.py.backup-20260403-184615  models.py.backup2  openclaw_skill.py  peach_tree_ethics.py  philosophy.py  philosophy_enhanced.py  science.py  utils.py  validators.py
implementations/python/prism_sdk/plugins/: __init__.py  base.py  manager.py
implementations/python/prism_sdk/tests/: test_peach_tree_ethics.py
implementations/python/tests/: test_basics.py  test_prism_sdk.py
protocol/v1.0/: IETF-DRAFT-prism-interconnect-00.md  IETF-DRAFT-prism-interconnect-00.txt  README-IETF.md  SPECIFICATION.md  UPDATE-SUMMARY.md
science/validation/: hypotheses.py
scripts/: add_artistic_comments.py  laugh.sh  setup_dev_env.bat  setup_dev_env.sh  share_prism.bat  share_prism.sh  update-journey.ps1
spec/: PIP-v2-design-draft.md  PROTOCOL_EVOLUTION.md  protocol-v0.1.json
tutorials/: README.md  interactive_tutorial.py
